[Resource Manager] HostInitiator debug
